# Universal-Image-Classifier-Cpp

./: DEVELOPMENT.md  README.md
proj/cmake/: CMakeLists.txt
src/: network.cpp
